| Bug #4905 | Stored procedure doesn't clear for "Rows affected" | ||
|---|---|---|---|
| Submitted: | 5 Aug 2004 1:00 | Modified: | 29 Sep 2004 16:57 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Bugs System | Target Version: | |
[5 Aug 2004 1:00]
Peter Gulutzan
[6 Aug 2004 3:07]
Miguel Solorzano
Verified against latest 5.0 BK tree.
[29 Sep 2004 16:57]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
