Fixed BUG#4905: Stored procedure doesn't clear for "Rows affected".

mysql-test/r/sp.result:
  New test case for BUG#4905
mysql-test/t/sp.test:
  New test case for BUG#4905
sql/sql_parse.cc:
  Reset row count before CALL.